--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -8,3 +8,7 @@ allow_dirty = False
 [bumpversion:file:./falcon-caching/__init__.py]
 search = __version__ = "{current_version}"
 replace =  __version__ = "{new_version}"
+
+[bumpversion:file:./docs/conf.py]
+search = release = '{current_version}'
+replace =  release = '{new_version}'
