Travis pipenv issue fix #2
See pipenv issue https://github.com/pypa/pipenv/issues/2120

Signed-off-by: Zoltan Fedor <zoltan.1.fedor@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before-install:
   - sudo apt-get update
   - sudo apt-get -y install libmemcached-dev memcached redis-server
 install:
+  - pip install pipenv
   - pipenv install --dev
 script: pytest
 after_success:
