Travis PyPy fix - removing Mypy dev package
Signed-off-by: Zoltan Fedor <zoltan.1.fedor@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,7 @@ test = [
     "pytest-xprocess",
     "redis",
     "tox",
-    "tox-pipenv-install",
-    "mypy"
+    "tox-pipenv-install"
 ]
 doc = []
 dev = []
