--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py36,
 		  py37,
           py38
-          #pypy35
+          pypy3
 # needed, so it does not ignore pyproject.toml:
 isolated_build = True
 
