--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
       dist: bionic
 before-install:
   - sudo apt-get update
-  - sudo apt-get -y install libmemcached-dev memcached redis-server
+  - sudo apt-get -y install pypy3-dev libmemcached-dev memcached redis-server
 install:
   - pip install pipenv
   - pipenv install --dev
