Travis PyPy fix - Pipenv doesn't work on PyPy3.5
Signed-off-by: Zoltan Fedor <zoltan.1.fedor@gmail.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,10 +2,10 @@
 [pytest]
 addopts=-v
         # -s -n auto
-        -x
+        # -x
         --pep8
         --cov=falcon_caching
-        #--cov-fail-under 80
+        --cov-fail-under 70
         --showlocals
         --disable-pytest-warnings
         --ignore=docs
