--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,17 @@ dist: bionic
 sudo: required
 matrix:
   include:
-    # see supported Python versions at https://docs.travis-ci.com/user/languages/python/
+    # see Travis-supported Python versions at https://docs.travis-ci.com/user/languages/python/
     - python: 3.6
       dist: bionic
     - python: 3.7
       dist: bionic
     - python: 3.8
       dist: bionic
-    - python: pypy3.5
-      dist: xenial
+    # unfortunately PyPy is not working on PyPy 3.5
+    # see https://github.com/pypa/pipenv/issues/3313
+    # - python: pypy3.5
+    #   dist: xenial
     - python: pypy3.6-7.2.0
       dist: bionic
 before-install:
