--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,6 +1,6 @@
 codecov:
   notify:
-    require_ci_to_pass: no
+    require_ci_to_pass: yes
 
 coverage:
   precision: 2
@@ -21,7 +21,7 @@ parsers:
       macro: no
 
 comment:
-  layout: "reach, diff, flags, files, footer"
+  layout: "reach,diff,flags,tree"
   behavior: default
   require_changes: no
 
