--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ matrix:
       dist: bionic
 before-install:
   - sudo apt-get update
+  - sudo apt-get -y install redis-tools=5:4.0.9-1ubuntu0.2
   - sudo apt-get -y install libmemcached-dev memcached redis-server redis-sentinel
   - pip install codecov
 install:
