--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
 module = "falcon_caching"
+dist-name = "falcon-caching"
 author = "Zoltan Fedor"
 author-email = "zoltan.1.fedor@gmail.com"
 home-page = "https://github.com/zoltan-fedor/falcon-caching"
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Environment :: Web Environment",
     "License :: OSI Approved :: MIT License",
     "Intended Audience :: Developers",
