Caching the `Content-Type` header
This is to fix https://github.com/zoltan-fedor/falcon-caching/issues/2

We have started caching the `Content-Type` header, but also added a config option (``CACHE_CONTENT_TYPE_JSON_ONLY``) to turn this off, as it is not required if the cached responders are only using the default ```Content-Type` = `application/json``` header, which results in a performance boost due to no `msgpack` serialization is required.

Signed-off-by: Zoltan Fedor <zoltan.1.fedor@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ classifiers = [
     "Typing :: Typed"
 ]
 requires = [
-    "falcon >=1.0.0"
+    "falcon >=1.0.0",
+    "msgpack"
 ]
 description-file = "README.md"
 requires-python = ">=3.6"
