--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@
 addopts=-v
         # -s -n auto
         # -x
-        --pep8
+        # --pep8
         --cov=falcon_caching
         --cov-fail-under 78
         --showlocals
