--- a/pytest.ini
+++ b/pytest.ini
@@ -13,7 +13,7 @@ addopts=-v
 # Do not run tests in the build folder
 #norecursedirs= build
 
-# Running all tests should take less than 12 minutes.
+# No individual test should be running longer than 12 minutes.
 # Otherwise, something went wrong.
 timeout = 720
 
