--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,16 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+aiofiles = "*"
 autodoc = "*"
 bump2version = "*"
+coredis = "*"
+emcache = "*"
 flit = "*"
 importlib-metadata = "*"
 pylibmc = "*"
 pytest = "*"
+pytest-asyncio = "*"
 pytest-cov = "*"
 pytest-pep8 = "*"
 pytest-xdist = "*"
