Fixing tests - issues with redis-sentinel

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,7 +45,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libmemcached-dev memcached redis-server redis-sentinel python3-dev
           python -m pip install --upgrade pip
-          pip install -U coverage setuptools tox wheel pipenv codecov pytest pytest-cov
+          pip install -U coverage setuptools tox wheel pipenv codecov pytest pytest-cov pytest-xprocess
           python --version
           pip --version
           pipenv --version
@@ -55,6 +55,8 @@ jobs:
           # importlib-metadata is needed for Python 3.6 and 3.7
           pipenv install --dev importlib-metadata
           ulimit -n 4096
+          service redis-sentinel stop
+          cp tests/sentinel_original.conf tests/sentinel.conf
 
       - name: Test with pytest
         run: |
