--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ pytest = "*"
 pytest-asyncio = "*"
 pytest-cov = "*"
 pytest-pep8 = "*"
+pytest-rerunfailures = "*"
 pytest-xdist = "*"
 pytest-xprocess = "*"
 redis = "*"
