--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,8 @@ addopts=-v
         --showlocals
         --disable-pytest-warnings
         --ignore=docs
+        --reruns 5
+        --reruns-delay 1
 
 # Do not run tests in the build folder
 #norecursedirs= build
