Dropping Python 3.6 support

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,10 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36,
-		  py37,
-          py38
+envlist = py37,
+          py38,
+          py39,
+          py310
           pypy3
 # needed, so it does not ignore pyproject.toml:
 isolated_build = True
@@ -18,6 +19,6 @@ deps =
 pipfile_use_develop = False  # Default True
 commands =
 	pipenv install --dev
-	# importlib-metadata is needed for Python 3.6 and 3.7
+	# importlib-metadata is needed for Python 3.7
 	pipenv install --dev importlib-metadata
 	pytest
